<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011 Scripture Software (http://scripturesoftware.org/)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="reader"
        android:summary="@string/category_reader_summary"
        android:title="@string/category_reader" >
        
        <PreferenceCategory 
            android:title="@string/category_reader_appearance" >
            
            <com.BibleQuote.controls.ColorPicker.ColorPickerPreference
                android:key="TextColor"
                android:persistent="true"
                android:title="@string/text_color"
                android:summary="@string/text_color_summary"
                android:defaultValue="#000000" />
            
            <com.BibleQuote.controls.ColorPicker.ColorPickerPreference
                android:key="TextBG"
                android:persistent="true"
                android:title="@string/background"
                android:summary="@string/background_summary"
                android:defaultValue="#FFFFFF" />

            <com.BibleQuote.controls.NumberChoise
                android:defaultValue="12"
                android:dialogTitle="@string/text_size"
                android:key="TextSize"
                android:persistent="true"
                android:summary="@string/current_text_size"
                android:title="@string/text_size" />

        </PreferenceCategory>
        
        <PreferenceCategory 
            android:title="@string/category_reader_other" >
            
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="ReadModeByDefault"
                android:persistent="true"
                android:summary="@string/read_mode_by_default_summary"
                android:title="@string/read_mode_by_default" />
            
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="DisableAutoScreenRotation"
                android:persistent="true"
                android:summary="@string/may_need_to_restart"
                android:title="@string/disable_auto_screen_rotation" />
            
            <ListPreference
                android:key="HistorySize"
                android:defaultValue="10"
                android:entries="@array/history_size"
                android:entryValues="@array/history_size"
                android:title="@string/category_reader_other_history_size" 
                android:summary="@string/category_reader_other_history_size_summary" 
                android:persistent="true"/>
        
        </PreferenceCategory>
    
    </PreferenceScreen>
    
    <PreferenceScreen
        android:summary="@string/category_reports_summary"
        android:title="@string/category_reports" >
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="acra.enable"
            android:summaryOff="@string/reports_enable_summaryOff"
            android:summaryOn="@string/reports_enable_summaryOn"
            android:title="@string/reports_enable" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="acra.syslog.enable"
            android:summary="Privacy issue"
            android:summaryOff="@string/pref_acra_syslog_disabled"
            android:summaryOn="@string/pref_acra_syslog_enabled"
            android:title="@string/pref_acra_syslog" />

        <EditTextPreference
            android:key="acra.user.email"
            android:summary="@string/pref_acra_user_email_summary"
            android:title="@string/pref_acra_user_email" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="acra.alwaysaccept"
            android:summaryOff="@string/pref_acra_alwaysaccept_disabled"
            android:summaryOn="@string/pref_acra_alwaysaccept_enabled"
            android:title="@string/pref_acra_alwaysaccept" />
    
    </PreferenceScreen>

</PreferenceScreen>